# gnn-demos

./: 01-GraphDemo.ipynb  02-Graphs.ipynb  02-Word2Vec.ipynb  03-DeepWalk.ipynb  04a-Node2Vec.ipynb  04b-Node2Vec.ipynb  04b-RecSys.ipynb  05-NodeFeaturesVanillaNN.ipynb  06-GCN.ipynb  pyproject.toml
