[tool.poetry]
name = "gnn"
version = "0.1.0"
description = ""
authors = ["Willie Wheeler <wwheeler@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torch-geometric = "^2.6.1"

# Downgraded tp 1.26.4 for gensim compatibility
#numpy = "^2.2.3"
numpy = "^1.26.4"

# Note that pandas 2.2.3 is incompatible with torch-geometric-temporal
pandas = "^2.2.3"

networkx = "^3.4.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
gensim = "^4.3.3"
jupyterlab = "^4.3.5"
node2vec = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
